--- a/style.css
+++ b/style.css
@@ -38,18 +38,24 @@ header p{
 }
 
 #profilePhoto{
-    width: 120px;
+    width: 150px;
     border-radius: 50%;
     text-align: center;
 }
 
 #userName{
+    margin-top: 5px;
     color: #FFFFFF;
     font-weight: 400;
 }
 
 #description{
+    margin-top: 10px;
     color: #919193;
+}
+
+main{
+    margin-top: 15px;
 }
 
 a{
